// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtTextarea Snap render AtTextarea -- props className 1`] = `
<div
  class="at-textarea at-textarea--WEB test"
>
  <textarea
    class="at-textarea__textarea"
    maxlength="200"
    placeholder=""
  />
  <div
    class="at-textarea__counter"
  >
    0
    /
    200
  </div>
</div>
`;

exports[`AtTextarea Snap render AtTextarea -- props customStyle 1`] = `
<div
  class="at-textarea at-textarea--WEB"
>
  <textarea
    class="at-textarea__textarea"
    maxlength="200"
    placeholder=""
  />
  <div
    class="at-textarea__counter"
  >
    0
    /
    200
  </div>
</div>
`;

exports[`AtTextarea Snap render AtTextarea -- props maxlength 1`] = `
<div
  class="at-textarea at-textarea--WEB"
>
  <textarea
    class="at-textarea__textarea"
    maxlength="200"
    placeholder=""
  />
  <div
    class="at-textarea__counter"
  >
    0
    /
    200
  </div>
</div>
`;

exports[`AtTextarea Snap render AtTextarea -- props maxlength 2`] = `
<div
  class="at-textarea at-textarea--WEB"
>
  <textarea
    class="at-textarea__textarea"
    maxlength="200"
    placeholder="test"
  />
  <div
    class="at-textarea__counter"
  >
    0
    /
    200
  </div>
</div>
`;

exports[`AtTextarea Snap render AtTextarea -- props maxlength 3`] = `
<div
  class="at-textarea at-textarea--WEB"
>
  <textarea
    class="at-textarea__textarea"
    maxlength="200"
    placeholder=""
  />
  <div
    class="at-textarea__counter"
  >
    0
    /
    200
  </div>
</div>
`;

exports[`AtTextarea Snap render AtTextarea -- props maxlength 4`] = `
<div
  class="at-textarea at-textarea--WEB"
>
  <textarea
    class="at-textarea__textarea"
    maxlength="200"
    placeholder=""
  />
  <div
    class="at-textarea__counter"
  >
    0
    /
    200
  </div>
</div>
`;

exports[`AtTextarea Snap render AtTextarea -- props value 1`] = `
<div
  class="at-textarea at-textarea--WEB"
>
  <textarea
    class="at-textarea__textarea"
    maxlength="200"
    placeholder=""
  >
    test
  </textarea>
  <div
    class="at-textarea__counter"
  >
    4
    /
    200
  </div>
</div>
`;

exports[`AtTextarea Snap render initial AtTextarea 1`] = `
<div
  class="at-textarea at-textarea--WEB"
>
  <textarea
    class="at-textarea__textarea"
    maxlength="200"
    placeholder=""
  />
  <div
    class="at-textarea__counter"
  >
    0
    /
    200
  </div>
</div>
`;
